# uni-update

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: aur-publish.yml  ci.yml
aur/: .SRCINFO  PKGBUILD
src/: cli.cpp  cli.hpp  distro.cpp  distro.hpp  extras.cpp  extras.hpp  main.cpp  runner.cpp  runner.hpp
